--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -1,3 +1,5 @@
 @import url("index.css");
 @import url("post.css");
 @import url("subscribe.css");
+@import url("about.css");
+@import url("search.css");
