--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -66,7 +66,7 @@ body {
   padding: 5px;
 }
 
-.navBar a {
+.navLink {
   border-radius: 8px;
   font-size: small;
   margin: 15px;
@@ -74,7 +74,7 @@ body {
   text-decoration: none;
 }
 
-.navBar a:hover {
+.navLink:hover {
   color: #fc4a1a;
 }
 
@@ -107,7 +107,8 @@ body {
 }
 
 .postCard {
-  background-color: #f7b733;
+  background-color: #4abdac;
+  border: 1px solid #dfdce3;
   border-radius: 8px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   display: flex;
@@ -118,6 +119,15 @@ body {
 
 .postCard:hover {
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
+.postButton {
+  background-color: #f78733;
+  border: 1px solid #dfdce3;
+  border-radius: 8px;
+  font-size: smaller;
+  padding: 5px;
+  width: 50px;
 }
 
 .ft {
@@ -134,6 +144,6 @@ body {
   grid-area: sc;
 }
 
-.socialIcons a {
+.socialIconsLink {
   margin: 5px;
 }
