--- a/resources/css/post.css
+++ b/resources/css/post.css
@@ -22,6 +22,7 @@
 
 .subHeading {
   font-size: small;
+  height: 95%;
 }
 
 .postBody {
@@ -30,24 +31,48 @@
   display: grid;
   grid-area: pt;
   grid-template-areas:
-    "tlt"
-    "ab"
-    "pst";
+    "tlt tlt"
+    "ab pst";
   margin: 10px;
   padding: 15px;
 }
 
-.postBody h1 {
-  grid-area: tlt;
+@media only screen and (max-width: 600px) {
+  .postBody {
+    align-items: flex-start;
+    border-radius: 8px;
+    display: grid;
+    grid-area: pt;
+    grid-template-areas:
+      "tlt"
+      "ab"
+      "pst";
+    margin: 10px;
+    padding: 15px;
+  }
 }
 
-.postBody h3 {
+.postHeading {
   grid-area: tlt;
 }
 
 .authorInfo {
-  float: right;
+  display: inline-block;
   grid-area: ab;
+}
+
+.fig {
+  margin: 0px;
+  text-align: center;
+  width: 150px;
+}
+
+.avatar {
+  background-image: url("../images/family.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  height: 250px;
 }
 
 .post {
@@ -55,41 +80,33 @@
   display: flex;
   flex-direction: column;
   grid-area: pst;
+  height: 100%;
+  justify-content: center;
   padding: 20px;
-  text-align: left;
+  text-align: center;
 }
 
-.post div {
+.socialShare {
   align-items: baseline;
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
 }
 
-.post a {
-  margin: 8px;
-}
-
-.avatar {
-  align-items: flex-start;
-  background-image: url("../images/family.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: contain;
-  float: left;
-  grid-area: ab;
-  height: 250px;
-  justify-content: left;
+.iconLinks {
+  margin: 4px;
 }
 
 .postImageContainer {
-  display: grid;
+  display: flex;
   grid-area: img;
-  grid-template-areas:
-    "im im"
-    "tx tx"
-    "sp sp";
+  height: 100%;
+  justify-content: center;
   width: 200px;
+}
+
+.captionText {
+  text-align: center;
 }
 
 .postImage {
@@ -101,9 +118,4 @@
   grid-area: im;
   height: 200px;
   min-width: 150px;
-}
-
-.postImageCaption {
-  grid-area: tx;
-  text-align: center;
 }
